tests/scripts/errors/runtime/negate_string.cdo
VAR x = -"hello";
print(x);
